# reloaded-templates-rust

./: .gitignore  mkdocs.yml
.github/tests/: test_template.py
docs/migration/: about.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md
templates/general/: .gitignore  README.MD  cargo-generate.toml
templates/general/.github/: template-version.txt
templates/general/.github/workflows/: rust.yml
templates/general/src/: AGENTS.md  Cargo.toml
templates/general/src/.cargo/: documentation.md  general.md  performance.md  verify.ps1  verify.sh
templates/general/src/cli/: Cargo.toml
templates/general/src/{{project-name}}/: Cargo.toml
